--- a/assets/css/kegiatan-osis.css
+++ b/assets/css/kegiatan-osis.css
@@ -443,6 +443,7 @@
         width: 100%;
         display: flex;
         justify-content: center;
+        margin-top: 1rem;
     }
 
     .video-wrapper video {
