--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,1 @@
-<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon/favicon.ico' | relative_url }}">
+<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon_io/favicon.ico' | relative_url }}">
